--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "http": "^0.0.1-security",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
